# option

./: .flake8  README.md  pyproject.toml
.github/workflows/: python.yml
option/: __init__.py  option.py
tests/: test_option.py
